using System;
using System.Collections.Generic;
using System.Text;

namespace PayrollSystem
{
    /// <summary>
    /// Represents an employee in the payroll system, including their name, role, base salary, and contact information.
    /// </summary>
    public class Employee
    {
        public string Name { get; set; }

        public EmployeeRole Role { get; set; }

        public const decimal TAX_RATE = 0.10m; // 10% constant tax rate

        private decimal _baseSalary;

        /// <summary>
        /// Gets or sets the base salary of the employee.
        /// </summary>
        /// <exception cref="ArgumentOutOfRangeException">
        /// Thrown when the value is less than 1000.
        /// </exception>
        public decimal BaseSalary
        {
            get { return _baseSalary; }
            set
            {
                if (value < 1000)
                {
                    throw new ArgumentOutOfRangeException(nameof(BaseSalary), "Base salary cannot be less than 1000.");
                }
                _baseSalary = value;
            }
        }
        public class ContactInfo
        {
            public string Email;
            public string Phone;
        }

        ~Employee()
        {
            Console.WriteLine("Employee object removed from memory.");
        }
    }
}
