namespace PayrollSystem
{
    public enum EmployeeRole
    {
        Developer,
        Manager,
        Tester
    }
}
